namespace ModelApp.Models;

public class Category
{
    public int CategoryId { get; set; }
    public String? CategoryName { get; set; }
}
