@startuml
title Class Diagram
hide empty members

package "ModelApp.Models" {
    class Book {
        + Id: int
        + Title: string
        + Price: decimal
    }

    class Category {
        + CategoryId: int
        + CategoryName: string?
    }
}

package "ModelApp.Data" {
    class ApplicationContextInMemory {
        + {static} Books: List<Book>
        + {static} Categories: List<Category>
    }
}

package "ModelApp.Controllers" {
    class BooksController {
        + GetAllBooks(): IActionResult
        + GetOneBook(id: int): IActionResult
    }

    class CategoriesController {
        + GetAllCategories(): IActionResult
    }
}

"ModelApp.Data.ApplicationContextInMemory" ..> "ModelApp.Models.Book"
"ModelApp.Data.ApplicationContextInMemory" ..> "ModelApp.Models.Category"

"ModelApp.Controllers.BooksController" ..> "ModelApp.Data.ApplicationContextInMemory"
"ModelApp.Controllers.CategoriesController" ..> "ModelApp.Data.ApplicationContextInMemory"
@enduml
